feat(tooltip): Add the possibility to set up an icon - fix testProgressBar gradle task by allowing reflection on javax.swing and java.awt